# CG_1term

3Laba_OpenGLinHome/: 3Laba_OpenGLinHome.sln  CMakeLists.txt
3Laba_OpenGLinHome/3Laba_OpenGLinHome/: 3Laba_OpenGLinHome.vcxproj  3Laba_OpenGLinHome.vcxproj.filters  CMakeCache.txt  geometry.h  main.cpp  model.cpp  model.h  myGL.cpp  myGL.h  tgaimage.h
Laba3/: MyMath.h  lab3.cpp  lab3.sln  lab3.vcxproj  lab3.vcxproj.filters  output.tga  parserOBJ.cpp  parserOBJ.h  shaders.h
Laba3/CompGraphic/: CompGraphic.vcxproj  CompGraphic.vcxproj.filters  geometry.cpp  geometry.h  main.cpp  model.h  output_front.tga  tgaimage.cpp
Laba3_extra_background/CompGraphic/: CompGraphic.vcxproj  CompGraphic.vcxproj.filters  camera.h  main.cpp  output_front_with_background.tga  output_side_with_background.tga  output_three_quarter.tga  output_three_quarter_with_background.tga  output_top.tga  output_top_with_background.tga  tgaimage.h  zbuffer.tga
Laba3_extra_ice/: CompGraphic.sln  output_side.tga  output_top_layered_ice.tga
Laba3_extra_ice/CompGraphic/: CompGraphic.vcxproj  CompGraphic.vcxproj.filters  main.cpp  model.cpp  model.h  output_front_layered_ice.tga  output_front_layered_sphere.tga  output_side_layered_ice.tga  output_side_layered_sphere.tga  output_three_quarter_layered_ice.tga  output_three_quarter_layered_sphere.tga  output_top_layered_sphere.tga  tgaimage.cpp  tgaimage.h
Laba4/Common/: d3dApp.cpp  d3dx12.h
Laba_3/: CMakeLists.txt
Laba_3/Include/: camera.h  mesh.h  our_gl.h  tgaimage.h
Laba_3/Laba_3/: CMakeLists.txt  Laba_3.cpp  Laba_3.h
Laba_3/src/: main.cpp  (+4 more)
(+56 files in other folders)
